# yiyi-dictionary

./: .gitignore  LICENSE  README.md  build.sh  dev.sh  index.html  install.sh  package.json  run.sh  start.sh  test_backend.py  test_direct.py  test_multi_dict.js  vite.config.ts  需求
.github/workflows/: build.yml
docs/: API.md  DESIGN.md
scripts/: create_sample_db.py  expand_dictionary.py  fix_definition_format.py  generate_chinese_english_dict.py  import_ancient_dict.py  import_dictionary.py
src/: App.vue  main.ts
src-tauri/: Cargo.toml  dict_data.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  commands.rs  database.rs  lib.rs  main.rs  models.rs  test_db.rs
src/components/: FloatWindow.vue  HelpPanel.vue  HistoryPanel.vue  MainWindow.vue  MultiResultCard.vue  ResultCard.vue  SettingsPanel.vue  TodoPanel.vue  VocabularyPanel.vue
src/data/: mockData.ts
src/stores/: api.ts  dictionary.ts  settings.ts  tauri.ts
src/styles/: main.css
src/types/: index.ts
src/utils/: dictionary.ts
